Mess with formatting (very messy)

--- a/app/data/screens/general_idea_screen.kv
+++ b/app/data/screens/general_idea_screen.kv
@@ -2,6 +2,6 @@
 
 IdeaScreen:
     name: 'General_Idea_Screen'
-    display_name: "Choose an Idea"
+    display_name: "Ideas"
 
     previous_screen: "Title_Screen"
