--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -2,9 +2,10 @@
 
 ShowcaseScreen:
     name: 'Create_Person_Options'
-    display_name: "Create Friend Profile"
+    display_name: "Add Friend"
 
     previous_screen: "Friend_List"
+    has_home_button: True
 
     HeartfeltHellosButton:
         size_hint_y: None
