--- a/app/data/screens/friend_creation_first_step.kv
+++ b/app/data/screens/friend_creation_first_step.kv
@@ -5,4 +5,5 @@ FriendCreationScreenFirstStep:
     display_name: "Create Friend Profile"
 
     previous_screen: "Create_Person_Options"
+    has_home_button: True
 
