--- a/app/data/screens/friend_creation_second_step.kv
+++ b/app/data/screens/friend_creation_second_step.kv
@@ -5,4 +5,5 @@ FriendCreationScreenSecondStep:
     display_name: "Create Friend Profile"
 
     previous_screen: "Friend_Creation_First_Step"
+    has_home_button: True
 
