--- a/app/data/screens/general_idea_screen.kv
+++ b/app/data/screens/general_idea_screen.kv
@@ -2,6 +2,7 @@
 
 IdeaScreen:
     name: 'General_Idea_Screen'
-    display_name: "Ideas"
+    display_name: ""
 
-    previous_screen: "Title_Screen"
+    previous_screen: ""
+    has_home_button: False
