--- a/app/data/screens/idea_creation_second_step.kv
+++ b/app/data/screens/idea_creation_second_step.kv
@@ -5,4 +5,4 @@ IdeaCreationScreenSecondStep:
     display_name: "Create Idea"
 
     previous_screen: "Idea_Creation_First_Step"
-
+    has_home_button: False
