--- a/app/data/screens/message_screen.kv
+++ b/app/data/screens/message_screen.kv
@@ -5,6 +5,7 @@ MessageScreen:
     display_name: "iMessages"
 
     previous_screen: "Idea_Share_Rate_Screen"
+    has_home_button: True
 
 #    BoxLayout:
 #        orientation: 'vertical'
