--- a/app/data/screens/michael_screen.kv
+++ b/app/data/screens/michael_screen.kv
@@ -5,6 +5,7 @@ MichaelScreen:
     #display_name: 'Michael'
 
     previous_screen: "Friend_List"
+    has_home_button: True
 
 #    BoxLayout:
 #        orientation: 'vertical'
