--- a/app/data/screens/sub_idea_screen.kv
+++ b/app/data/screens/sub_idea_screen.kv
@@ -2,6 +2,7 @@
 
 SubIdeaScreen:
     name: 'Sub_Idea_Screen'
-    display_name: "Choose a Follow-Up"
+    display_name: "Follow-Ups"
 
     previous_screen: "Idea_Share_Rate_Screen"
+    has_home_button: True
