--- a/app/data/screens/friend_creation_first_step.kv
+++ b/app/data/screens/friend_creation_first_step.kv
@@ -2,7 +2,7 @@
 
 FriendCreationScreenFirstStep:
     title: "Friend_Creation_First_Step"
-    display_name: "Create Friend Profile"
+    display_name: "Create Friend"
 
     previous_screen: "Create_Person_Options"
     has_home_button: True
