--- a/app/data/screens/friend_creation_second_step.kv
+++ b/app/data/screens/friend_creation_second_step.kv
@@ -2,7 +2,7 @@
 
 FriendCreationScreenSecondStep:
     title: "Friend_Creation_Second_Step"
-    display_name: "Create Friend Profile"
+    display_name: "Create Friend"
 
     previous_screen: "Friend_Creation_First_Step"
     has_home_button: True
