--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -2,7 +2,7 @@
 
 CreatePersonOptionsScreen:
     name: 'Create_Person_Options'
-    display_name: "Create Friend"
+    display_name: "New Friend"
 
     previous_screen: "Friend_List"
     has_home_button: True
