--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -5,7 +5,7 @@ CreatePersonOptionsScreen:
     display_name: "New Friend"
 
     previous_screen: "Friend_List"
-    has_home_button: True
+    has_home_button: False
 
 #    BoxLayout:
 #        orientation: "vertical"
