Possible design changes

--- a/app/data/screens/general_idea_screen.kv
+++ b/app/data/screens/general_idea_screen.kv
@@ -2,7 +2,7 @@
 
 IdeaScreen:
     name: 'General_Idea_Screen'
-    display_name: ""
+    display_name: "Generic Ideas"
 
     previous_screen: ""
     has_home_button: False
