viewed idea history screen

--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -1,27 +1,11 @@
+#:import TitleScreen app.data.screen_types.title_screen
 
 
-ShowcaseScreen:
+TitleScreen:
     name: 'Title_Screen'
     display_name: "HeartfeltHellos"
 
     previous_screen: ""
     has_home_button: False
 
-    
-    Label:
-        text: "Let's Reconnect!"
-        font_name:"Raleway"
-        font_size:"45dp"
-        halign:"center"
-        valign:"middle"
-        text_size: dp(400), None
-        color: 0, 0, 0
-
-    Label:
-        text: "\n\n\n\nWhat type of conversation ideas do you want?" 
-        font_name:"Raleway"
-        font_size:"27dp"
-        valign:"middle"
-        halign:"center"
-        text_size: dp(325), None
-        color: 0, 0, 0
+# Note: Moved labels to title_screen.py!
