Some fixes for viewed ideas

--- a/app/data/screens/general_idea_screen.kv
+++ b/app/data/screens/general_idea_screen.kv
@@ -4,5 +4,5 @@ IdeaScreen:
     name: 'General_Idea_Screen'
     display_name: "Generic Ideas"
 
-    previous_screen: ""
+    previous_screen: "Title_Screen"
     has_home_button: False
