--- a/app/data/screens/viewed_idea_screen.kv
+++ b/app/data/screens/viewed_idea_screen.kv
@@ -6,4 +6,4 @@ ViewedIdeaScreen:
     display_name: "Viewed Ideas"
 
     previous_screen: "Title_Screen"
-    has_home_button: True
+    has_home_button: False
