--- a/app/data/screens/friend_list.kv
+++ b/app/data/screens/friend_list.kv
@@ -4,6 +4,6 @@ FriendScreen:
     title: "Friend_List"
     display_name: "Choose a Friend"
 
-    previous_screen: ""
+    previous_screen: "Title_Screen"
     next_screen: "Michael_Screen"
     has_home_button: False
