--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -87,11 +87,33 @@ BoxLayout:
         HeartfeltHellosButton:
             text: 'Generic'
             font_name: "Raleway"
+            text_size: (width, None)
             halign: "center"
             text_size:dp(150), None
             background_color: (.4, .4, .4) if app.general_tab_pressed else (.6, .6, 0.6)
-            font_size: "23dp"
+            font_size: "19dp"
             on_release: app.on_general_ideas_pressed()
+
+        Widget:
+            # This widget acts as a vertical separator line
+            size_hint_x: None
+            width: 10  # Width of the separator line
+            canvas.before:
+                Color:
+                    rgba: (0, 0, 0, 1)  # Color of the separator line, black in this case
+                Line:
+                    points: [self.center_x, self.y, self.center_x, self.top]
+                    width: 1.01
+        
+        HeartfeltHellosButton:
+            text: 'Seen Ideas'
+            font_name: "Raleway"
+            text_size: (width, None)
+            halign: "center"
+            text_size:dp(150), None
+            background_color: (.4, .4, .4) if app.viewed_idea_tab_pressed else (.6, .6, 0.6)
+            font_size: "19dp"
+            on_release: app.on_viewed_ideas_pressed()
 
         Widget:
             # This widget acts as a vertical separator line
@@ -107,8 +129,9 @@ BoxLayout:
         HeartfeltHellosButton:
             text: 'Personalized'
             font_name: "Raleway"
+            text_size: (width, None)
             halign: "center"
             text_size:dp(150), None
             background_color: (.4, .4, .4) if app.friend_tab_pressed else (.6, .6, 0.6)
-            font_size: "23dp"
+            font_size: "19dp"
             on_release: app.on_friend_ideas_pressed()
