--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -104,27 +104,6 @@ BoxLayout:
                 Line:
                     points: [self.center_x, self.y, self.center_x, self.top]
                     width: 1.01
-        
-        HeartfeltHellosButton:
-            text: 'Seen Ideas'
-            font_name: "Raleway"
-            text_size: (width, None)
-            halign: "center"
-            text_size:dp(150), None
-            background_color: (.4, .4, .4) if app.viewed_idea_tab_pressed else (.6, .6, 0.6)
-            font_size: "19dp"
-            on_release: app.on_viewed_ideas_pressed()
-
-        Widget:
-            # This widget acts as a vertical separator line
-            size_hint_x: None
-            width: 10  # Width of the separator line
-            canvas.before:
-                Color:
-                    rgba: (0, 0, 0, 1)  # Color of the separator line, black in this case
-                Line:
-                    points: [self.center_x, self.y, self.center_x, self.top]
-                    width: 1.01
 
         HeartfeltHellosButton:
             text: 'Personalized'
@@ -135,3 +114,25 @@ BoxLayout:
             background_color: (.4, .4, .4) if app.friend_tab_pressed else (.6, .6, 0.6)
             font_size: "19dp"
             on_release: app.on_friend_ideas_pressed()
+
+        Widget:
+            # This widget acts as a vertical separator line
+            size_hint_x: None
+            width: 10 if app.history_available else 0  # Width of the separator line
+            canvas.before:
+                Color:
+                    rgba: (0, 0, 0, 1)  # Color of the separator line, black in this case
+                Line:
+                    points: [self.center_x, self.y, self.center_x, self.top]
+                    width: 1.01
+
+        HeartfeltHellosButton:
+            text: 'History' if app.history_available else ""
+            font_name: "Raleway"
+            text_size: (width, None)
+            halign: "center"
+            text_size:dp(150), None
+            size_hint_x: 1 if app.history_available else 0
+            background_color: (.4, .4, .4) if app.viewed_idea_tab_pressed else (.6, .6, 0.6)
+            font_size: "19dp"
+            on_release: app.on_viewed_ideas_pressed()
