--- a/app/data/screens/friend_list.kv
+++ b/app/data/screens/friend_list.kv
@@ -2,7 +2,7 @@
 
 FriendScreen:
     title: "Friend_List"
-    display_name: "Choose a Friend"
+    display_name: "Your Friends"
 
     previous_screen: "Title_Screen"
     next_screen: "Michael_Screen"
