--- a/app/data/screens/viewed_idea_screen.kv
+++ b/app/data/screens/viewed_idea_screen.kv
@@ -3,7 +3,7 @@
 
 ViewedIdeaScreen:
     name: 'Viewed_Idea_Screen'
-    display_name: "Viewed Ideas"
+    display_name: "Idea History"
 
     previous_screen: "Title_Screen"
     has_home_button: False
